# Collins

./: CMakeLists.txt  collins0.cpp  collins0.hpp  conll2json.py  coref.py  coref_test.conll  features.cpp  features.hpp  main.cpp  parse.py  readme.txt  sent_tokenize.py  server.py  tokenize.py  train.cpp  train.hpp  utils.cpp  utils.hpp
server/: app-old.js  app-single.js  app.css  app.js  force-tree.js  index-old.html  index.html  jit-tree.js  single.html  tree.js
server/libs/: download.js
server/libs/angular-ui/bootstrap/: .ui-bootstrap-0.2.0.js.swp  ui-bootstrap-0.2.0.js
server/libs/jquery/: jquery-ui-1.10.1.custom.js  jquery-ui-1.10.2.custom.js
